katalog/kong-mesh/multi-cluster/zone-control-plane/resources/kong-mesh-ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-mesh-ingress
  namespace: kong-mesh-system
  labels:
    app.kubernetes.io/name: kong-mesh
    app.kubernetes.io/instance: kong-mesh
  annotations:
spec:
  type: LoadBalancer
  ports:
    - port: 10001
      protocol: TCP
      targetPort: 10001
  selector:
    app: kong-mesh-ingress
    app.kubernetes.io/name: kong-mesh
    app.kubernetes.io/instance: kong-mesh
